[tool.poetry]
name = "latticeadaptors"
version = "0.1.0"
description = ""
authors = ["Tom Mertens <tom.mertens@helmholtz-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
termcolor = "^1.1.0"
Cycler = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
